; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_grep.c_run_pager.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_grep.c_run_pager.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.child_process = type { i8*, i32, i32 }
%struct.grep_opt = type { %struct.string_list* }
%struct.string_list = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@CHILD_PROCESS_INIT = common dso_local global %struct.child_process zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.grep_opt*, i8*)* @run_pager to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @run_pager(%struct.grep_opt* %0, i8* %1) #0 {
  %3 = alloca %struct.grep_opt*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.string_list*, align 8
  %6 = alloca %struct.child_process, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.grep_opt* %0, %struct.grep_opt** %3, align 8
  store i8* %1, i8** %4, align 8
  %9 = load %struct.grep_opt*, %struct.grep_opt** %3, align 8
  %10 = getelementptr inbounds %struct.grep_opt, %struct.grep_opt* %9, i32 0, i32 0
  %11 = load %struct.string_list*, %struct.string_list** %10, align 8
  store %struct.string_list* %11, %struct.string_list** %5, align 8
  %12 = bitcast %struct.child_process* %6 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %12, i8* align 8 bitcast (%struct.child_process* @CHILD_PROCESS_INIT to i8*), i64 16, i1 false)
  store i32 0, i32* %7, align 4
  br label %13

13:                                               ; preds = %30, %2
  %14 = load i32, i32* %7, align 4
  %15 = load %struct.string_list*, %struct.string_list** %5, align 8
  %16 = getelementptr inbounds %struct.string_list, %struct.string_list* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = icmp slt i32 %14, %17
  br i1 %18, label %19, label %33

19:                                               ; preds = %13
  %20 = getelementptr inbounds %struct.child_process, %struct.child_process* %6, i32 0, i32 2
  %21 = load %struct.string_list*, %struct.string_list** %5, align 8
  %22 = getelementptr inbounds %struct.string_list, %struct.string_list* %21, i32 0, i32 1
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %22, align 8
  %24 = load i32, i32* %7, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i64 %25
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @argv_array_push(i32* %20, i32 %28)
  br label %30

30:                                               ; preds = %19
  %31 = load i32, i32* %7, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %7, align 4
  br label %13

33:                                               ; preds = %13
  %34 = load i8*, i8** %4, align 8
  %35 = getelementptr inbounds %struct.child_process, %struct.child_process* %6, i32 0, i32 0
  store i8* %34, i8** %35, align 8
  %36 = getelementptr inbounds %struct.child_process, %struct.child_process* %6, i32 0, i32 1
  store i32 1, i32* %36, align 8
  %37 = call i32 @run_command(%struct.child_process* %6)
  store i32 %37, i32* %8, align 4
  %38 = load i32, i32* %8, align 4
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %40, label %43

40:                                               ; preds = %33
  %41 = load i32, i32* %8, align 4
  %42 = call i32 @exit(i32 %41) #4
  unreachable

43:                                               ; preds = %33
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @argv_array_push(i32*, i32) #2

declare dso_local i32 @run_command(%struct.child_process*) #2

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #3


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
